# A_modular_Plugin-CodeChat

./: .gitignore  CodeChat idea.rst  README.rst  Readme.md  Readme.rst  codechat_config.json  codechat_config.yaml  conf.py  index.rst  readthedocs.yml  run_sphinx.bat  sbuild.bat
CodeChat_Extension/: .gitignore  CHANGELOG.rst  CodeChat_Extension_Readme.rst  extension.js  index.rst  package-lock.json  package.json
CodeChat_Extension/JavaScript_Client/: Client.js  Client_Readme.rst  tutorial.thrift
CodeChat_Extension/JavaScript_Client/gen-nodejs/: CodechatSyc.js
CodeChat_Server/: .coveragerc  .flake8  CodeChatServer.py  CodeChat_client.html  CodeChat_client.js  MANIFEST.in  Python_Server_Readme.rst  README.md  README.rst  cli.rst  codechat.sh  contents.rst  developer.rst  easyinstallnotes.rst  install.rst  install2.md  linux_installer.sh  mypy.ini  pre_commit_check.py  pyproject.toml  readme.rst  run_server.bat  security.rst  setup.cfg  setup.py  templates.rst  windows_installer.ps1
CodeChat_Server/CodeChat_Server/: __init__.py  __main__.py  constants.py  install.sh  render_manager.py  renderer.py  server.py
CodeChat_Server/CodeChat_Server/CodeChat_Client/: contents.rst
CodeChat_Server/CodeChat_Server/CodeChat_Client/static/: CodeChat_client.css  CodeChat_client.js  ReconnectingWebsocket.js  splitter-min.js  splitter.css  splitter.js  thrift.js
CodeChat_Server/CodeChat_Server/CodeChat_Client/static/gen-js/: CodeChatClient.js  CodeChat_Services_types.js  EditorPlugin.js
CodeChat_Server/CodeChat_Server/CodeChat_Client/templates/: CodeChat_client.html  insecure.html
CodeChat_Server/CodeChat_Server/gen_py/CodeChat_Services/: CodeChatClient-remote  CodeChatClient.py  EditorPlugin-remote  EditorPlugin.py  __init__.py  constants.py  ttypes.py
CodeChat_Server/CodeChat_Server/sphinx_template/: conf.py
CodeChat_Server/CodeChat_Server/templates/doxygen/: codechat_config.yaml
CodeChat_Server/CodeChat_Server/templates/javadoc/: Simple.java  codechat_config.yaml
CodeChat_Server/CodeChat_Server/templates/mdbook/: book.toml  codechat_config.yaml
CodeChat_Server/CodeChat_Server/templates/mdbook/src/: SUMMARY.md  book.toml  chapter_1.md  chapter_2.py  codechat-config.yaml
CodeChat_Server/CodeChat_Server/templates/mkdocs/: codechat_config.yaml
CodeChat_Server/CodeChat_Server/templates/pretext/: codechat_config.yaml  project.ptx
CodeChat_Server/CodeChat_Server/templates/pretext/source/: minimal.ptx
CodeChat_Server/CodeChat_Server/templates/runestone/: codechat_config.yaml  conf.py  sphinx_settings.json
CodeChat_Server/CodeChat_Server/templates/runestone/_sources/: index.rst
CodeChat_Server/CodeChat_Server/templates/sphinx/: codechat_config.yaml  conf.py  index.rst
CodeChat_Server/ci_utils/: ci_utils.py
CodeChat_Server/gen-js/: CodeChat_Services_types.js  Editor_Extension.js  Web_Sync.js
CodeChat_Server/gen-py/CodeChat_Services/: Editor_Extension-remote  Editor_Extension.py  Web_Sync-remote  Web_Sync.py  __init__.py  ttypes.py
CodeChat_Server/templates/doxygen/: Doxyfile  codechat_config.yaml  main.c
CodeChat_Server/templates/javadoc/: Simple.java  codechat_config.yaml
CodeChat_Server/templates/mkdocs/: codechat_config.yaml
CodeChat_Server/templates/mkdocs/docs/: index.md
CodeChat_Server/templates/pretext/: codechat_config.yaml  minimal.xml
CodeChat_Server/templates/pretext/source/: minimal.ptx
CodeChat_Server/templates/runestone/: build_info  codechat_config.yaml  pavement.py
CodeChat_Server/templates/sphinx/: index.rst
CodeChat_Server/tests/: ci_utils.py  conftest.py  contents.rst  pre_commit_check.py  test_server.py
CodeChat_Services/: CodeChat_Services.thrift  contents.rst  run_thrift.bat
ThreatDragonModels/A modular plugin Architecture for CodeChat plugin/: A modular plugin Architecture for CodeChat plugin.json
Thrift/: CodeChat_Services.thrift  Thrift_Readme.rst  run_thrift.bat  tutorial.thrift
Thrift/JavaScript_Client/: Client.js  Client_Readme.rst  CodeChat.css  conf.py  index.rst  readme.rst  tutorial.thrift
Thrift/Python_Server/: PythonServer.py  Python_Rerver_Readme.rst  Python_Server_Readme.rst  check_render_client.html  myscripts.js  out.html  ppserver.bat  tmp.html  tutorial.thrift
Thrift/Python_Server/gen-js/: CodechatSyc.js
Thrift/Python_Server/gen-nodejs/: CodechatSyc.js  tutorial_types.js
Thrift/Python_Server/gen-py/tutorial/: CodechatSyc-remote  CodechatSyc.py  __init__.py  ttypes.py
Thrift/Python_Server/static/: tmp.html
Thrift/Python_Server/static/gen-js/: CodechatSyc.js  tutorial_types.js
Thrift/gen-nodejs/: CodechatSyc.js
Thrift/gen-py/tutorial/: CodechatSyc-remote  CodechatSyc.py
VSCode_Extension/: .vscodeignore  CHANGELOG.rst  CodeChat_Extension_Readme.rst  README.md  contents.rst  extension.js  index.rst  package-lock.json  package.json  tsconfig.json
VSCode_Extension/gen-nodejs/: CodeChat_Services_types.js  Editor_Extension.js  Web_Sync.js
VSCode_Extension/src/: extension.ts
VSCode_Extension/src/gen-nodejs/: CodeChatClient.d.ts  CodeChatClient.js  CodeChat_Services_types.d.ts  CodeChat_Services_types.js  EditorPlugin.d.ts  EditorPlugin.js
docs/: CHANGELOG.rst  CodeChat.css  CodeChat_screenshot_annotated.vsdx  common_problems.rst  developer.rst  docs-requirements.txt  templates.rst
extensions/: contents.rst  developer.rst  universal.rst
extensions/VSCode/: README.md  contents.rst  developer.rst  package-lock.json  package.json  package.json.rst  tsconfig.json.rst
extensions/VSCode/src/: extension.ts
extensions/VSCode/src/gen-nodejs/: CodeChat_Services_types.js  EditorPlugin.js
extensions/VSCode_Extension/: .vscodeignore  README.md  contents.rst  developer.rst  install.rst  package-lock.json  package.json  tsconfig.json
extensions/VSCode_Extension/src/: extension.ts
extensions/VSCode_Extension/src/gen-nodejs/: CodeChat_Services_types.d.ts  CodeChat_Services_types.js  EditorPlugin.d.ts  EditorPlugin.js
helloworld/: extension.js  index.rst  package-lock.json  package.json
helloworld/client_folder/: Client.js
